--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -52,6 +52,7 @@ body {
                 label {
                     float: right;
                     line-height: 60px;
+                    font-size: 13px;
 
                     @media(max-width:860px) {
                         float: left;
@@ -108,6 +109,8 @@ body {
                                 height: auto;
                                 line-height: normal;
                                 padding: 14px 24px 15px 15px;
+                                margin: 1px;
+                                border-bottom: 1px solid #e6e6e6
                             }
                         }
 
@@ -115,12 +118,13 @@ body {
                             position: static;
                             display: block;
                             background-color: #f2f2f2;
+
                         }
 
                     }
 
                     .all-list {
-                        width: 1230px;
+                        width: 80%;
                         position: absolute;
                         top: 60px;
                         right: 10%;
@@ -134,37 +138,81 @@ body {
                         ul {
                             width: calc(1230px / 6);
 
-                            a {
-                                color: #000;
-                                text-decoration: none;
-
-
-
-                            }
-                            li {
-                                padding: 12px 0px 12px 24px;
-
-                            }
-                            
-
-
                             label {
-                                padding: 12px 0px 12px 24px;
                                 line-height: normal;
                                 width: 100%;
+                                float: none;
                                 
+
                                 li {
+                                    font-size: 13px;
+                                    padding: 12px 0px 12px 24px;
                                     font-weight: bold;
                                     display: block;
-                                    
-                                }
 
+                                    @media(max-width:860px) {
+                                        font-weight: lighter;
+                                        padding: 14px 15px 15px;
+                                        margin: 1px;
+                                        border:1px solid rgba($color: #000000, $alpha: 0);
+                                        border-bottom: 1px solid #e6e6e6;
+                                    }
+                                }
+                                    @media(max-width:860px) {
+                                    li:active {
+                                        border: 1px dashed #000;
+                                    }
+                                }
+                                i{
+                                    display: none;
+                                    @media(max-width:860px) {
+                                        display: block;
+                                        float: right;
+                                        }
+                                }
+                                
+                            }
+                            input{
+                                &:checked+ul{
+                                    display: block;
+                                }
+                            }
+
+                            ul {
+
+                                a {
+                                    color: #000;
+                                    text-decoration: none;
+
+
+
+                                    li {
+                                        padding: 12px 0px 12px 24px;
+                                        font-size: 13px;
+                                        border: 1px solid rgba($color: #000000, $alpha: 0);
+    
+                                        &:active {
+                                            border: 1px dashed #000;
+                                        }
+                                        @media(max-width:860px) {
+                                            padding: 14px 15px 15px;
+                                            margin: 1px;
+                                            border-bottom: 1px solid #e6e6e6;
+                                        }
+
+                                    }
+                                    &:hover {
+                                        text-decoration: underline;
+                                    }
+                                }
                                 @media(max-width:860px) {
-                                    // padding: 14px 15px 15px;
+                                    padding: 1px 0px 0px 30px;
+                                    display: none;
                                 }
-
 
                             }
+
+
 
                             @media(max-width:860px) {
                                 width: 100%;
@@ -179,7 +227,15 @@ body {
                             padding: 12px 0px;
                             color: #000;
                             text-decoration: none;
+                            @media(max-width:860px) {
+                                text-align: start;
+                                font-size: 13px;
+                                padding: 14px 15px 15px;
+                                        margin: 1px;
+                                        border:1px solid rgba($color: #000000, $alpha: 0);
+                                        border-bottom: 1px solid #e6e6e6;
 
+                            }
                         }
 
                         @media(max-width:860px) {
@@ -188,6 +244,8 @@ body {
                             display: block;
                             padding: 0px;
                             box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+                        border-bottom:#000 solid 1px ;
+                            
                         }
                     }
 
@@ -197,6 +255,7 @@ body {
                         z-index: 2;
                         width: 100%;
                         display: none;
+                        background-color: #f2f2f2;
 
                     }
 
@@ -209,6 +268,7 @@ body {
                     float: right;
                     display: flex;
                     line-height: 60px;
+                    font-size: 16px;
 
                     .link {
                         height: 55px;
